[package]
name = "yb_overview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking"] }
serde_json = "1.0.73"
serde = "1.0.132"
serde_derive = "1.0.132"
structopt = "0.3.25"
port_scanner = "0.1.5"